<resources>
    <string name="app_name">BeerTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="dataNasc">Data de Nascimento</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="cancelar">Cancelar</string>
    <string name="sair">Sair</string>
    <string name="nomeRole">Sorteio do Motorista da Rodada</string>
    <string name="facebook_login">Login com Facebook</string>
    <string name="password">Senha</string>
    <string name="signin_text">Ainda não possui uma conta?</string>
    <string name="signin">Cadastre-se</string>
    <string name="start_drinking">Você ainda não bebeu o bastante</string>
    <string name="choose_style">Escolha o style</string>
    <string name="beauty_beer_image">Linda imagem de uma cerveja</string>
    <string name="harmonia">harmonia</string>
    <string name="preco">preco</string>
    <string name="detalhes">detalhes</string>
    <string name="inicio">Inicio</string>
    <string name="nav_motorista">Motorista da rodada</string>
    <string name="nav_estilos">Estilos de cerveja</string>
    <string name="nav_new_role">Criar Role</string>
    <string name="nav_amigos">Amigos</string>
    <string name="title_activity_motorista">Motorista</string>
    <string name="title_activity_estilos">Estilos</string>
    <string name="title_activity_new_role">New_role</string>
    <string name="title_activity_amigos">Amigos</string>
    <string name="chosen_driver">Você é o motorista da rodada</string>
    <string name="choose_again">Sortear Novamente</string>
    <string name="home">Inicio</string>
    <string name="check_age">Você confirma que possui ao menos 18 anos?</string>
    <string name="loading">Carregando</string>

    <!-- Facebook -->
    <string name="facebook_app_id">306179239879479</string>
</resources>
