<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.beertracker.Cadastro">

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin_15_dp"
        android:text="@string/cadastro"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nome_cadastro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_50_dp"
        android:layout_marginEnd="@dimen/default_margin_40_dp"
        android:layout_marginStart="@dimen/default_margin_40_dp"
        android:layout_marginTop="@dimen/default_margin_40_dp"
        android:layout_below="@+id/txtCadastro"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/dataNasc_cadastro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_50_dp"
        android:layout_marginEnd="@dimen/default_margin_40_dp"
        android:layout_marginStart="@dimen/default_margin_40_dp"
        android:layout_marginTop="@dimen/default_margin_40_dp"
        android:layout_below="@+id/nome_cadastro"
        android:hint="@string/dataNasc"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date"/>

    <EditText
        android:id="@+id/email_cadastro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_50_dp"
        android:layout_marginEnd="@dimen/default_margin_40_dp"
        android:layout_marginStart="@dimen/default_margin_40_dp"
        android:layout_marginTop="@dimen/default_margin_40_dp"
        android:layout_below="@+id/dataNasc_cadastro"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/senha_cadastro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_size_50_dp"
        android:layout_marginEnd="@dimen/default_margin_40_dp"
        android:layout_marginStart="@dimen/default_margin_40_dp"
        android:layout_marginTop="@dimen/default_margin_40_dp"
        android:layout_below="@+id/email_cadastro"
        android:inputType="textPassword"
        android:hint="@string/senha" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/default_margin_40_dp"
        android:layout_marginTop="@dimen/default_margin_40_dp"
        android:layout_below="@+id/senha_cadastro"
        android:text="@string/cadastrar"
        android:background="@drawable/theme_button_pattern"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/default_margin_40_dp"
        android:layout_below="@+id/senha_cadastro"
        android:layout_marginStart="@dimen/default_margin_40_dp"
        android:text="@string/cancelar"
        android:background="@drawable/theme_button_pattern"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</RelativeLayout>
